| Bug #16722 | Fulltext: implicit limit for query word number (depends on length of the query) | ||
|---|---|---|---|
| Submitted: | 23 Jan 2006 11:42 | Modified: | 2 Feb 2006 16:56 |
| Reporter: | Sergey Vojtovich | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Any (any) |
| Assigned to: | Sergey Vojtovich | Target Version: | |
[25 Jan 2006 9:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/33384
[26 Jan 2006 11:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1668
[30 Jan 2006 13:32]
Sergey Vojtovich
Fixed in 5.1.6. Removed implicit limit for query word number.
[2 Feb 2006 16:56]
Mike Hillyer
Documented in 5.1.6 changelog:
<listitem>
<para>
Word limit removed from FULLTEXT to improve compatibility with
custom parsers. (Bug #16722)
</para>
</listitem>

Description: This bug affects custom fulltext parsers only, built-in parser works just fine. The problem is that MySQL has implicit limit for query word number which depends on length of the query: limit= 1 + query_length / 2; E.g.: 'AAAA' query length is 4, the limit is 3 words per this query, but if the parser expands query to 4 words ('test1', 'test2', 'test3', 'test4') it results in unexpected behavior. Note that query 'AAAAAA' works just fine. How to repeat: N/A