BUG#16722 - Fulltext: implicit limit for query word number (depends on length of the query) Remove implicit limit for query word number.